# polls

./: .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 01_foo_create_user.sql  02_foo_create_polls.sql
src/: cli.rs  db.rs  main.rs  models.rs  polls.rs  user.rs  vote.rs
