[package]
name = "voting_system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }     # Async runtime
serde = { version = "1", features = ["derive"] }   # For serializing data
uuid = { version = "1", features = ["serde", "v4"] }  # To generate unique poll/choice IDs
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate", "macros"] }
dotenv = "0.15"  # to load environment variables (DB URL)
colored = "2"


